# js-node-nova

./: .env.example  .gitignore  Cargo.toml  README.md  app.js  deno.json  deploy.sh  importMap.json  nova.bat  package.json  tsconfig.json
add/: .eslintrc.json.bkp  .gitignore  .gitignore.bkp  .npmignore.bkp  README.md.bkp  package.json.bkp  tsconfig.json.bkp
copy/: app.js  build-apk.txt  debug.json  debugger.json.bkp
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2022-10-07-184845_create_configs/: up.sql
migrations/2022-10-07-185312_create_secrets/: down.sql  up.sql
migrations/2022-12-06-022919_allow_multi_secrets/: up.sql
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240210065551_/: migration.sql
src/: aes.rs  aes.ts  app.js  app.ts  main.rs  mappings.json  models.rs  output.rs  postgres.ts  schema.rs
src/commands/: config.rs  config.ts  configs.rs  generate.rs  generate.ts  mod.rs  secret.rs  secret.ts  secrets.rs  setup.rs
src/models/: Config.ts  Secret.ts
