[package]
name = "rs-cli-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.13.0"
clipboard = "0.5.0"
diesel = { version = "2.0.0", features = ["postgres"] }
json = "0.12.4"
prettytable-rs = "^0.10"
regex = "1.6.0"
rpassword = "7.2.0"
seahorse = "2.1"
serde = "1.0"
serde_json = "0.9"
serde_yaml = "0.9"
toml = "0.5.9"
urlencoding = "2.1.2"
