[package]
name = "rs-cli-nova"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
clipboard = "0.5.0"
diesel = { version = "2.1.4", features = ["sqlite"] }
json = "0.12.4"
prettytable-rs = "0.10.0"
regex = "1.10.3"
rpassword = "7.3.1"
seahorse = "2.2.0"
serde = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
sudo = "0.6.0"
tokio = "1.36.0"
toml = "0.8.10"
urlencoding = "2.1.3"
